edited for task tranform

--- a/index.html
+++ b/index.html
@@ -85,8 +85,36 @@
                 </li>
             </nav>
 
+            <div class="cards">
+                <div class="items item1">
+                    <img src="https://assets.central.co.th/DANIELWELLINGTON-ClassicSheffield40mmRosegoldWatch-MKP0366735-1?$JPEG$&wid=550" width="300px" alt="">
+                    <h2>Grab Now</h2>
+                </div>
+                <div class="items item2">
+                    <img src="https://iplanet.one/cdn/shop/files/AirPods_PDP_Image_Position-1__en-IN.jpg?v=1691163748" width="300px" alt="">
+                    <h2>Grab Now</h2>
+                </div>
+                <div class="items item3">
+                    <img src="https://mahabirwb.com/upload_image/gallery/large/Philips-2-1-Spaeker-MMS2550B-94-1.jpg" width="300px" alt="">
+                    <h2>Grab Now</h2>
+                </div>
+                <div class="items item4">
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6536/6536335_sd.jpg;maxHeight=640;maxWidth=550;format=webp" width="300px" alt="">
+                    <h2>Grab Now</h2>
+                </div>
+                <div class="items item5">
+                    <img src="https://m.media-amazon.com/images/I/31aDWE4msZL.jpg" width="300px" alt="">
+                    <h2>Grab Now</h2>
+                </div>
+                <div class="items item6">
+                    <img src="https://rukminim2.flixcart.com/image/850/1000/xif0q/mobile/s/p/e/-original-imagtkzunhcht8vz.jpeg?q=90&crop=false" width="300px" alt="">
+                    <h2>Grab Now</h2>
+                </div>
+            </div>
 
         </div>
+
+
         
 
 
